src/parser/snapshots/alf__parser__parser_tests__dot_notation_function_names.snap
---
source: src/parser/parser_tests.rs
expression: entries
---
[
    AliasEntry {
        name: "t.helper",
        entry_type: Function,
        value: "t.helper() {\n  echo \"helper function\"\n}",
        comments: None,
        source_file: [REDACTED]
    },
    AliasEntry {
        name: "my-alias",
        entry_type: Function,
        value: "my-alias() {\n  echo \"alias with dash\"\n}",
        comments: None,
        source_file: [REDACTED]
    },
]
