src/parser/snapshots/alf__parser__parser_tests__non_alf_comments_ignored.snap
---
source: src/parser/parser_tests.rs
expression: entries
---
[
    AliasEntry {
        name: "myalias",
        entry_type: Alias,
        value: "echo hello",
        comments: None,
        source_file: [REDACTED]
    },
]
